[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '2.0.0-rc3'

[package]
authors = ['Anonymous']
build = 'build.rs'
description = 'Substrate Node template'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-rc3'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'node-template'

[dependencies]
futures = '0.3.4'
log = '0.4.8'
parking_lot = '0.10.0'
structopt = '0.3.8'

[dependencies.node-template-runtime]
path = '../runtime'
version = '2.0.0-rc3'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '0.8.0-rc3'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '0.8.0-rc3'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '2.0.0-rc3'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '0.8.0-rc3'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '0.8.0-rc3'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '0.8.0-rc3'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '0.8.0-rc3'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '0.8.0-rc3'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '0.8.0-rc3'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '2.0.0-rc3'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '0.8.0-rc3'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '0.8.0-rc3'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '2.0.0-rc3'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '2.0.0-rc3'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '2.0.0-rc3'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '2.0.0-rc3'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '19b4b70e7c7cf966cb5f5669a5e153485943095a'
version = '2.0.0-rc3'
